kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: promo-postmortem-streamlit
spec:
  selector:
    app.kubernetes.io/name: promo-postmortem-streamlit
  ports:
    - name: http
      port: 80
      targetPort: http
