kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: promo-postmortem-streamlit
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '600'
spec:
  tls:
    - hosts:
        - placeholder.example.com
      secretName: placeholder-tls
  rules:
    - host: placeholder.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: promo-postmortem-streamlit
                port:
                  number: 80
